Carousel renderizing. New issue: Second carousel element is overlapping first

--- a/src/App.css
+++ b/src/App.css
@@ -47,3 +47,15 @@
     color: #4e5f5f !important;
     font-size: 15px!important;
 }
+
+/*Carousel items*/
+
+.carouselTitle{
+    color:#717da0;
+}
+.carouselItem{
+    display: flex !important;
+    flex-direction: column !important;
+    width: 1000px !important;
+    height: 500px !important;
+}
